# qTox_enhanced-1

./: .cirrus.yml  .clang-format  .clang-tidy  .clog.toml  .dockerignore  .gitignore  .restyled.yaml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  MAINTAINING.md  README.md  cspell.config.yaml  docker-compose.yml  res.qrc  simple_make.sh
audio/: BUILD.bazel  CMakeLists.txt
audio/resources/: audio_res.qrc  call_end.s16le.pcm  call_incoming.s16le.pcm  call_outgoing.s16le.pcm  format.md  notification.s16le.pcm
audio/src/: audio.cpp  iaudiosettings.cpp  iaudiosink.cpp
src/: BUILD.bazel  appmanager.cpp  appmanager.h  conferencelist.cpp  conferencelist.h  friendlist.cpp  friendlist.h  grouplist.cpp  grouplist.h  ipc.cpp  ipc.h  loginscreen.ui  main.cpp  mainwindow.ui  nexus.cpp  nexus.h  version.cpp.in  version.h  version.h.in
src/chatlog/: chatline.cpp  chatline.h  chatlinecontent.cpp  chatlinecontent.h  chatlinecontentproxy.cpp  chatlinecontentproxy.h  chatlinestorage.cpp  chatlinestorage.h  chatmessage.cpp  chatmessage.h  chatwidget.cpp  chatwidget.h  customtextdocument.cpp  customtextdocument.h  documentcache.cpp  documentcache.h  pixmapcache.cpp  pixmapcache.h  textformatter.cpp  textformatter.h
src/core/: chatid.cpp  chatid.h  conferenceid.cpp  conferenceid.h  core.cpp  core.h  coreav.cpp  coreav.h  coreext.cpp  coreext.h  corefile.cpp  corefile.h  dhtserver.cpp  dhtserver.h  extension.h  groupid.cpp  groupid.h  icoreconferencemessagesender.cpp  icoreconferencemessagesender.h  icoreconferencequery.cpp  icoreconferencequery.h  icoreextpacket.cpp  icoreextpacket.h  icorefriendmessagesender.cpp  icorefriendmessagesender.h  icoregroupmessagesender.cpp  icoregroupmessagesender.h  icoregroupquery.cpp  icoregroupquery.h  icoreidhandler.cpp  icoreidhandler.h  icoresettings.cpp  icoresettings.h  idebugsettings.cpp  idebugsettings.h  receiptnum.h  toxcall.cpp  toxcall.h  toxencrypt.cpp  toxencrypt.h  (+15 more)
src/model/: brokenmessagereason.h  chat.cpp  chat.h  chathistory.cpp  chathistory.h  chatlogitem.cpp  chatlogitem.h  conference.cpp  conference.h  conferenceinvite.cpp  conferenceinvite.h  conferencemessagedispatcher.cpp  conferencemessagedispatcher.h  exiftransform.cpp  exiftransform.h  friend.cpp  friend.h  friendmessagedispatcher.cpp  friendmessagedispatcher.h  group.cpp  group.h  groupinvite.cpp  groupinvite.h  groupmessagedispatcher.cpp  groupmessagedispatcher.h  ibootstraplistgenerator.cpp  ibootstraplistgenerator.h  ichatlog.h  imessagedispatcher.cpp  imessagedispatcher.h  message.cpp  message.h  notificationdata.h  notificationgenerator.cpp  notificationgenerator.h  sessionchatlog.cpp  sessionchatlog.h  status.cpp  status.h  systemmessage.h  (+1 more)
src/net/: avatarbroadcaster.cpp  avatarbroadcaster.h  bootstrapnodeupdater.cpp  bootstrapnodeupdater.h  toxuri.cpp  toxuri.h  updatecheck.cpp  updatecheck.h
src/persistence/: globalsettingsupgrader.cpp  globalsettingsupgrader.h  history.cpp  history.h  iconferencesettings.cpp  iconferencesettings.h  ifriendsettings.cpp  ifriendsettings.h  igroupsettings.cpp  igroupsettings.h  inotificationsettings.cpp  inotificationsettings.h  ismileysettings.cpp  ismileysettings.h  offlinemsgengine.cpp  offlinemsgengine.h  paths.cpp  paths.h  personalsettingsupgrader.cpp  personalsettingsupgrader.h  profile.cpp  profile.h  profilelocker.cpp  profilelocker.h  serialize.cpp  serialize.h  settings.cpp  settings.h  settingsserializer.cpp  settingsserializer.h  smileypack.cpp  smileypack.h  toxsave.cpp  toxsave.h
src/platform/: autorun.h  autorun_osx.cpp  autorun_win.cpp  autorun_xdg.cpp  capslock.h  capslock_osx.cpp  capslock_win.cpp  capslock_x11.cpp  posixsignalnotifier.cpp  posixsignalnotifier.h  screenshot.cpp  screenshot.h  screenshot_dbus.cpp  screenshot_dbus.h  stacktrace.cpp  stacktrace.h  timer.h  timer_osx.cpp  timer_win.cpp  timer_x11.cpp  x11_display.cpp  x11_display.h
src/video/: cameradevice.cpp  cameradevice.h  camerasource.cpp  camerasource.h  corevideosource.cpp  corevideosource.h  ivideosettings.cpp  ivideosettings.h  netcamview.cpp  netcamview.h  scopedavdictionary.cpp  scopedavdictionary.h  videoframe.cpp  videoframe.h  videomode.cpp  videomode.h  videosource.cpp  videosource.h  videosurface.cpp  videosurface.h
src/widget/: categorywidget.cpp  categorywidget.h  chatformheader.cpp  chatformheader.h  circlewidget.cpp  circlewidget.h  conferencewidget.cpp  conferencewidget.h  contentdialog.cpp  contentdialog.h  contentdialogmanager.cpp  contentdialogmanager.h  contentlayout.cpp  contentlayout.h  emoticonswidget.cpp  emoticonswidget.h  extensionstatus.cpp  extensionstatus.h  flowlayout.cpp  flowlayout.h  friendlistlayout.cpp  friendlistlayout.h  friendlistwidget.cpp  friendlistwidget.h  friendwidget.cpp  friendwidget.h  genericchatitemlayout.cpp  genericchatitemlayout.h  genericchatitemwidget.cpp  genericchatitemwidget.h  genericchatroomwidget.cpp  genericchatroomwidget.h  groupwidget.cpp  groupwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  loginscreen.cpp  loginscreen.h  maskablepixmapwidget.cpp  maskablepixmapwidget.h  (+21 more)
test/: BUILD.bazel
test/chatlog/: chatlinestorage_test.cpp  textformatter_test.cpp
test/core/: chatid_test.cpp  core_test.cpp  fileprogress_test.cpp  toxid_test.cpp  toxstring_test.cpp
test/dbutility/: CMakeLists.txt
test/mock/: CMakeLists.txt
test/model/: conferencemessagedispatcher_test.cpp  exiftransform_fuzz_test.cpp  exiftransform_test.cpp  friendlistmanager_test.cpp  friendmessagedispatcher_test.cpp  groupmessagedispatcher_test.cpp  messageprocessor_test.cpp  notificationgenerator_test.cpp  sessionchatlog_test.cpp
test/net/: bsu_test.cpp
test/persistence/: dbschema_test.cpp  offlinemsgengine_test.cpp  paths_test.cpp  serialize_fuzz_test.cpp  smileypack_test.cpp
test/platform/: posixsignalnotifier_test.cpp  stacktrace_test.cpp
test/resources/: test_data.qrc
test/widget/: filesform_test.cpp  loginscreen_test.cpp
util/: BUILD.bazel  CMakeLists.txt
util/src/: algorithm.cpp  display.cpp  network.cpp  ranges.cpp  toxcoreerrorparser.cpp
(+389 files in other folders)
