load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "util",
    srcs = glob(
        [
            "src/**/*.cpp",
        ],
    ),
    hdrs = glob(["include/**/*.h"]),
    copts = select({
        "//tools/config:freebsd": [],
        "//tools/config:linux": ["-fPIC"],
        "//tools/config:osx": [],
        "//tools/config:windows": [],
    }),
    defines = [
        "DEBUG",
        "QTOX_PLATFORM_EXT",
        "QT_MESSAGELOGCONTEXT",
        "UPDATE_CHECK_ENABLED",
    ],
    includes = ["include"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = [
        "//c-toxcore",
        "@qt//:qt_core",
    ],
)
